--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -118,7 +118,7 @@
       <block wx:for="{{item.goodsList}}" wx:for-index="iindex" wx:for-item="iitem" wx:key="{{iitem.id}}">
         <view class="item {{iindex % 2 == 0 ? '' : 'item-b'}}">
           <navigator url="../goods/goods?id={{iitem.id}}" class="a">
-            <image class="img" src="http://localhost:28080/file/download?fileId={{iitem.listPicUrl}}" background-size="cover"></image>
+            <image class="img" src="{{fileDownloadUrl}}{{iitem.listPicUrl}}" background-size="cover"></image>
             <text class="name">{{iitem.name}}</text>
             <text class="price">￥{{iitem.retailPrice}}</text>
           </navigator>
