--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -2,7 +2,7 @@
   <view wx:if="{{!openAttr}}">
     <swiper class="goodsimgs" indicator-dots="true" autoplay="true" interval="3000" duration="1000">
       <swiper-item wx:for="{{gallery}}" wx:key="{{item.id}}">
-        <image src="{{item.img_url}}" background-size="cover"></image>
+        <image src="{{fileDownloadUrl}}{{item.imgUrl}}" background-size="cover"></image>
       </swiper-item>
     </swiper>
     <view class="service-policy">
@@ -13,8 +13,8 @@
     <view class="goods-info">
       <view class="c">
         <text class="name">{{goods.name}}</text>
-        <text class="desc">{{goods.goods_brief}}</text>
-        <text class="price">￥{{goods.retail_price}}</text>
+        <text class="desc">{{goods.goodsBrief}}</text>
+        <text class="price">￥{{goods.retailPrice}}</text>
         <view class="brand" wx:if="{{brand.name}}">
           <navigator url="../brandDetail/brandDetail?id={{brand.id}}">
             <text>{{brand.name}}</text>
@@ -102,9 +102,9 @@
       <view class="b">
         <view class="item" wx:for="{{relatedGoods}}" wx:key="{{item.id}}">
           <navigator url="/pages/goods/goods?id={{item.id}}">
-            <image class="img" src="{{item.list_pic_url}}" background-size="cover"></image>
+            <image class="img" src="{{item.listPicUrl}}" background-size="cover"></image>
             <text class="name">{{item.name}}</text>
-            <text class="price">￥{{item.retail_price}}</text>
+            <text class="price">￥{{item.retailPrice}}</text>
           </navigator>
         </view>
       </view>
@@ -114,19 +114,19 @@
 
   <view wx:if="{{openAttr}}" class="attr-pop">
     <view class="img-info">
-      <image class="img" src="{{goods.list_pic_url}}"></image>
+      <image class="img" src="{{fileDownloadUrl}}{{goods.listPicUrl}}"></image>
       <view class="info">
         <view class="c">
-          <view class="p">价格：￥{{goods.retail_price}}</view>
+          <view class="p">价格：￥{{goods.retailPrice}}</view>
           <view class="a" wx:if="{{productList.length>0}}">已选择：{{checkedSpecText}}</view>
         </view>
       </view>
     </view>
     <view class="spec-con">
-      <view class="spec-item" wx:for="{{specificationList}}" wx:key="{{item.specification_id}}">
+      <view class="spec-item" wx:for="{{specificationList}}" wx:key="{{item.specificationId}}">
         <view class="name">{{item.name}}</view>
         <view class="values">
-          <view class="value {{vitem.checked ? 'selected' : ''}}" bindtap="clickSkuValue" wx:for="{{item.valueList}}" wx:for-item="vitem" wx:key="{{vitem.id}}" data-value-id="{{vitem.id}}" data-name-id="{{vitem.specification_id}}">{{vitem.value}}</view>
+          <view class="value {{vitem.checked ? 'selected' : ''}}" bindtap="clickSkuValue" wx:for="{{item.valueList}}" wx:for-item="vitem" wx:key="{{vitem.id}}" data-value-id="{{vitem.id}}" data-name-id="{{vitem.specificationId}}">{{vitem.value}}</view>
         </view>
       </view>
 
