--- a/pages/shopping/checkout/checkout.wxml
+++ b/pages/shopping/checkout/checkout.wxml
@@ -65,15 +65,15 @@
     <view class="goods-items">
         <view class="item" wx:for="{{checkedGoodsList}}" wx:key="{{item.id}}">
             <view class="img">
-                <image src="{{item.list_pic_url}}"></image>
+                <image src="{{fileDownloadUrl}}{{item.listPicUrl}}"></image>
             </view>
             <view class="info">
                 <view class="t">
-                    <text class="name">{{item.goods_name}}</text>
+                    <text class="name">{{item.goodsName}}</text>
                     <text class="number">x{{item.number}}</text>
                 </view>
-                <view class="m">{{item.goods_specifition_name_value||''}}</view>
-                <view class="b">￥{{item.retail_price}}</view>
+                <view class="m">{{item.goodsSpecifitionNameValue||''}}</view>
+                <view class="b">￥{{item.retailPrice}}</view>
             </view>
         </view>
     </view>
